[gd_scene load_steps=15 format=2]

[ext_resource path="res://scene/camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/cat.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/GlobalWord.gd" type="Script" id=3]
[ext_resource path="res://script/area 2D/randomArea.gd" type="Script" id=4]
[ext_resource path="res://scene/lvl/lvl10,10.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/d√©cor/music.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 510 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 549.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 805.5, 14 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 951, 22 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.5, 502.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 851, 22 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 18, 533.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 785, 22.5 )

[node name="GlobalWord" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera" parent="." instance=ExtResource( 1 )]
position = Vector2( -6, -1 )

[node name="bordure" type="StaticBody2D" parent="."]
position = Vector2( -500, -300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordure"]
position = Vector2( -269, 311 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bordure"]
position = Vector2( 1289, 336 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="bordure"]
position = Vector2( 475, 747 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="bordure"]
position = Vector2( 584, -168 )
shape = SubResource( 4 )

[node name="borduregauche" type="Area2D" parent="bordure"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordure/borduregauche"]
position = Vector2( -254, 286 )
shape = SubResource( 5 )

[node name="bordurehaut" type="Area2D" parent="bordure"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordure/bordurehaut"]
position = Vector2( 570, -151 )
shape = SubResource( 6 )

[node name="borduredroite" type="Area2D" parent="bordure"]
position = Vector2( 1, -1 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordure/borduredroite"]
position = Vector2( 1251, 341 )
shape = SubResource( 7 )

[node name="bordurebas" type="Area2D" parent="bordure"]
position = Vector2( 8, 10 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bordure/bordurebas"]
position = Vector2( 480, 742.5 )
shape = SubResource( 8 )

[node name="lvl" type="Node2D" parent="."]

[node name="lvl10,10" parent="lvl" instance=ExtResource( 5 )]

[node name="cat" parent="." instance=ExtResource( 2 )]

[node name="music" parent="." instance=ExtResource( 6 )]

[connection signal="area_entered" from="bordure/borduregauche" to="." method="_on_borduregauche_area_entered"]
[connection signal="area_entered" from="bordure/bordurehaut" to="." method="_on_bordurehaut_area_entered"]
[connection signal="area_entered" from="bordure/borduredroite" to="." method="_on_borduredroite_area_entered"]
[connection signal="area_entered" from="bordure/bordurebas" to="." method="_on_bordurebas_area_entered"]
